# claude-data-skills

./: .gitignore  CLAUDE.md  GEMINI.md  GOLDEN_TERMS.md  LICENSE  MANIFEST.in  README.md  RUNNING_INSTRUCTIONS.md  SKILLS.md  TODO.md  debugging.skill  package-lock.json  publish.ps1  pyproject.toml  requirements.txt  scapy.skill  setup.py  shapely.skill
.claude-plugin/: marketplace.json
.gemini/commands/: analyze.toml  define.toml  explore.toml  forecast.toml
claude_data_skills.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: ARCHITECTURE_GRAPH_RAG.md
docs/superpowers/plans/: 2026-03-27-autonomous-logic-recovery.md  2026-03-28-dictionary-agent.md  2026-04-05-bank-statement-scraper.md  2026-04-05-selective-knowledge-injection.md  2026-04-06-cupy-signal-mastery.md  2026-04-06-dictionary-agent-enhancements.md  2026-04-06-modular-dependencies.md  2026-04-10-graph-sieve-extraction.md
docs/superpowers/specs/: 2026-03-28-dictionary-agent-design.md  2026-04-05-bank-statement-scraper-design.md  2026-04-05-production-prompts.md  2026-04-05-selective-knowledge-injection-design.md  2026-04-06-consolidated-dictionary-agent.md  2026-04-06-cupy-signal-mastery-design.md  2026-04-06-modular-dependencies-design.md  2026-04-10-graph-sieve-extraction-design.md
graph-sieve/: README.md  pyproject.toml
graph-sieve/.gemini/commands/: define.toml
graph-sieve/src/graph_sieve/: __init__.py  agent.py  discovery.py  extractor.py  graph_engine.py  hashing.py  hebrew_utils.py  llm_client.py  mcp_server.py  models.py  ocr_engine.py  run_scanner.py  storage.py  tools.py
graph-sieve/tests/: test_clustering.py  test_discovery.py  test_doc_counter.py  test_extractor.py  test_extractor_complete.py  test_extractor_extended.py  test_filters.py  test_graph_engine.py  test_hebrew_support.py  test_learning.py  test_learning_priority.py  test_pipeline.py  test_storage.py  test_storage_layered.py  test_strategic_filter.py  test_validator.py  test_workflow_final.py
scientific-skills/binary-data-parsing/references/: struct-guide.md
scientific-skills/cli-scripts/: SKILL.md
scientific-skills/data-format-detection/: SKILL.md
scientific-skills/data-validation/: SKILL.md
scientific-skills/dotenv/: SKILL.md
scientific-skills/oracle-db/: SKILL.md
scientific-skills/pandas/: SKILL.md
scientific-skills/pandas/references/: indexing-selection.md
scientific-skills/s3/: SKILL.md
scientific-skills/windows-cli/: SKILL.md
scripts/: doc_extractor.py  post_install.py
skills/analyze/: SKILL.md
skills/anomaly-detection/: SKILL.md
skills/binary-data-parsing/: SKILL.md
skills/binary-data-parsing/references/: bytes-bitarray-guide.md
skills/bit-error-correction/scripts/: auto_ecc_repair.py
skills/build-dashboard/: SKILL.md
skills/create-viz/: SKILL.md
skills/data-analysis/dask/: SKILL.md
skills/data-analysis/exploratory-data-analysis/: SKILL.md
skills/data-analysis/geopandas/: SKILL.md
skills/data-analysis/matlab/: SKILL.md
skills/data-analysis/numpy/: SKILL.md
skills/data-analysis/pandas/: SKILL.md
skills/data-analysis/polars/: SKILL.md
skills/data-analysis/shapely/: SKILL.md
skills/data-context-extractor/: SKILL.md
skills/data-format-detection/: SKILL.md
skills/data-validation/: SKILL.md
skills/data-validation-methodology/: SKILL.md
skills/data-validation-technical/: SKILL.md
skills/data-visualization/: SKILL.md
skills/debugging/: SKILL.md
skills/dotenv/: SKILL.md
skills/elasticsearch/: SKILL.md
skills/exploratory-data-analysis/: SKILL.md
skills/explore-data/: SKILL.md
skills/ffmpeg/: SKILL.md
skills/geopandas/: SKILL.md
skills/get-available-resources/: SKILL.md
skills/git/: SKILL.md
skills/json-processing/: SKILL.md
skills/jupyter/: SKILL.md
skills/log-parsing/: SKILL.md
skills/matplotlib/: SKILL.md
skills/multithreading-io/: SKILL.md
skills/numpy/: SKILL.md
skills/oracle-db/: SKILL.md
skills/pandas/: SKILL.md
skills/pathlib/: SKILL.md
skills/pdf/: SKILL.md
skills/plotly/: SKILL.md
skills/plotly-dash/: SKILL.md
skills/polars/: SKILL.md
skills/postgresql/: SKILL.md
skills/pptx/: SKILL.md
skills/pymc/: SKILL.md
skills/pytest/: SKILL.md
skills/python-best-practices/: SKILL.md
skills/python-stdlib-pro/: SKILL.md
skills/python2-migration/: SKILL.md
skills/pytorch-lightning/: SKILL.md
skills/refactoring/: SKILL.md
skills/regex/: SKILL.md
skills/research-summaries/: SKILL.md
skills/scapy/: SKILL.md
skills/scientific-slides/: SKILL.md
skills/scientific-visualization/: SKILL.md
skills/scientific-writing/: SKILL.md
skills/scikit-learn/: SKILL.md
skills/scipy/: SKILL.md
skills/skill-engineering/: SKILL.md
skills/sql-queries/: SKILL.md
skills/sqlalchemy/: SKILL.md
skills/sqlite/: SKILL.md
skills/statistical-analysis-academic/: SKILL.md
skills/statistical-analysis-business/: SKILL.md
skills/statsmodels/: SKILL.md
skills/timesfm-forecasting/: SKILL.md
skills/wireshark-extensions/: SKILL.md
skills/write-query/: SKILL.md
skills/xlsx/: SKILL.md
src/dictionary_agent/: __init__.py  agent.py  ai_discovery.py  discovery.py  extractor.py  filters.py  graph_engine.py  llm_client.py  mcp_server.py  models.py  ocr_engine.py  pipeline.py  run_scanner.py  storage.py  strategic_filter.py  tools.py  validator.py  visualize.py  whois.py
storage/: hashes.json
tests/cupy_signal_explorer/: benchmark_runner.py  sanity_check.py  test_pitfalls.py
tests/data/: doc1.txt  doc2.txt  hebrew_1255.txt  notes.txt  onboarding.txt  random.txt  readme.md  report.txt  sample.docx  test.txt  test_doc.txt  test_whitelist.txt
tests/data_priority/: onboarding.txt
tests/dictionary_agent/: test_clustering.py  test_discovery.py  test_doc_counter.py  test_extractor.py  test_extractor_complete.py  test_extractor_extended.py  test_filters.py  test_graph_engine.py  test_hebrew_support.py  test_learning.py  test_learning_priority.py  test_pipeline.py  test_storage.py  test_storage_layered.py  test_strategic_filter.py  test_validator.py  test_workflow_final.py
(+516 files in other folders)
