[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-data-skills"
version = "3.0.0"
description = "A comprehensive collection of data science, analysis, and engineering skills and scripts."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Yoni Kremer", email = "yoni.kremer@example.com" }
]
keywords = ["data-science", "analysis", "scripts", "skills", "machine-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "polars",
    "torch",
    "transformers",
    "datasets",
    "evaluate",
    "accelerate",
    "timm",
    "matplotlib",
    "seaborn",
    "plotly",
    "kaleido",
    "dash",
    "sqlalchemy",
    "psycopg2-binary",
    "oracledb",
    "alembic",
    "boto3",
    "s3fs",
    "geopandas",
    "folium",
    "mapclassify",
    "pyarrow",
    "geoalchemy2",
    "contextily",
    "cartopy",
    "requests",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "click",
    "Pillow",
    "PyPDF2",
    "python-pptx",
    "pymupdf",
    "defusedxml",
    "openpyxl",
    "bitarray",
    "construct",
    "bitstring",
    "psutil",
    "tqdm",
    "ipywidgets",
    "nbformat",
    "nbconvert",
    "watermark",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "isort",
    "pyupgrade",
    "pylint",
    "vulture",
]

[project.scripts]
# Entry point for the stdlib demo script
stdlib-demo = "skills.python_dev.python_stdlib_pro.scripts.stdlib_demo:main"
setup-claude-skills = "claude_data_skills.cli.setup_skills:copy_skills_to_claude_home"

[tool.setuptools]
packages = ["skills", "claude_data_skills"]
package-dir = {"" = ".", "claude_data_skills" = "src/claude_data_skills"}

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "*.txt"]

[tool.ruff]
line-length = 88
target-version = "py39"
