[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-data-skills"
version = "3.4.1"
description = "A comprehensive collection of data science, analysis, and engineering skills and scripts."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Yoni Kremer", email = "yoni.kremer@example.com" }
]
keywords = ["data-science", "analysis", "scripts", "skills", "machine-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
ml = [
    "torch",
    "transformers",
    "datasets",
    "evaluate",
    "accelerate",
    "timm",
    "scipy",
    "scikit-learn",
]
viz = [
    "matplotlib",
    "seaborn",
    "plotly",
    "kaleido",
    "dash",
]
geo = [
    "geopandas",
    "folium",
    "mapclassify",
    "pyarrow",
    "geoalchemy2",
    "contextily",
    "cartopy",
]
db = [
    "sqlalchemy",
    "psycopg2-binary",
    "oracledb",
    "alembic",
    "boto3",
    "s3fs",
]
dict = [
    "pdfplumber",
    "python-docx",
    "python-pptx",
    "extract-msg",
    "easyocr",
    "pdf2image",
    "pyOneNote",
    "PyPDF2",
    "pymupdf",
    "defusedxml",
    "openpyxl",
    "pydantic",
    "pydantic-settings",
    "tqdm",
    "click",
]
dev = [
    "pytest",
    "ruff",
    "black",
    "isort",
    "pyupgrade",
    "pylint",
    "vulture",
]
all = [
    "numpy",
    "pandas",
    "torch",
    "transformers",
    "datasets",
    "evaluate",
    "accelerate",
    "timm",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "plotly",
    "kaleido",
    "dash",
    "geopandas",
    "folium",
    "mapclassify",
    "pyarrow",
    "geoalchemy2",
    "contextily",
    "cartopy",
    "sqlalchemy",
    "psycopg2-binary",
    "oracledb",
    "alembic",
    "boto3",
    "s3fs",
    "pdfplumber",
    "python-docx",
    "python-pptx",
    "extract-msg",
    "easyocr",
    "pdf2image",
    "pyOneNote",
    "PyPDF2",
    "pymupdf",
    "defusedxml",
    "openpyxl",
    "pydantic",
    "pydantic-settings",
    "tqdm",
    "click",
]

[project.scripts]
# Entry point for the stdlib demo script
stdlib-demo = "skills.python_dev.python_stdlib_pro.scripts.stdlib_demo:main"
setup-data-skills = "claude_data_skills.cli.setup_skills:main"
dictionary-scan = "dictionary_agent.run_scanner:main"
dictionary-lookup = "dictionary_agent.tools:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "*.txt", "*.toml"]

[tool.ruff]
line-length = 88
target-version = "py39"
