[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-sieve"
version = "1.0.0"
description = "Full Spectrum Graph Sieve - Automated Technical Term Extraction and Relationship Mapping"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pdfplumber",
    "python-docx",
    "python-pptx",
    "extract-msg",
    "markitdown",
    "easyocr",
    "pdf2image",
    "PyPDF2",
    "pymupdf",
    "pydantic",
    "pydantic-settings",
    "tqdm",
    "click",
    "mcp",
    "numpy",
    "pandas",
]

[project.scripts]
graph-sieve-scan = "graph_sieve.run_scanner:main"
graph-sieve-lookup = "graph_sieve.tools:main"
graph-sieve-mcp = "graph_sieve.mcp_server:mcp.run"
graph-sieve-visualize = "graph_sieve.visualize:main"
graph-sieve-whois = "graph_sieve.whois:main"

[tool.setuptools]
package-dir = { "" = "src" }
